
[package]
name = "stattrak"
version = "0.1.0"
edition = "2024"

[lib]
name = "stattrak"
path = "src/lib.rs"

[[bin]]
name = "stattrak-bin"
path = "src/bin.rs"

[dependencies]
egui = "0.27"
eframe = "0.27"
egui_plot = "0.27"
egui-file-dialog= "0.5"
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
parquet = "*"
arrow = "*"
polars = { version = "0.32", features = ["parquet", "lazy"] }
polars-lazy = {version = "0.32", features = ["parquet"]}