
[package]
name = "straptrack"
version = "0.1.0"
edition = "2024"

[lib]
name = "straptrack"
path = "src/lib.rs"

[[bin]]
name = "strap-gui"
path = "src/gui.rs"

[dependencies]
clap = "4.5.53"
anyhow = "1.0"
egui = "0.27"
eframe = "0.27"
egui_plot = "0.27"
egui-file-dialog= "0.5"
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
parquet = "56.2.0"
arrow = "56.2.0"
itertools = "0.10"
duckdb = { version = "=1.4.3", features = ["bundled", "parquet"] }
tempfile = "3.24.0"
zip = "6.0.0"
zstd = "0.13.3"
flate2 = "1.1.5"
